test_case/rust-lang_rust/51242_393472919.rs
plain
travis_time:start:test_ui
Check compiletest suite=ui mode=ui (x86_64-unknown-linux-gnu -> x86_64-unknown-linux-gnu)
[00:42:12] 
[00:42:12] running 1481 tests
[00:42:16] ..............................................F...........................................i.........
[00:42:21] ................................................i................F..................................
[00:42:29] ....................................................................................................
[00:42:32] ....................................................................................................
[00:42:35] ....................................................................................................
[00:42:40] ....................................................................................................
[00:42:40] ....................................................................................................
[00:42:44] ....................................................................................................
[00:42:49] ....................................................................................................
[00:42:54] ..............................................................................................i.....
[00:42:59] .......................................................................i............................
[00:43:04] ....................................................................................................
[00:43:09] ....................................................................................................
[00:43:15] ....................................................................................................
[00:43:19] ...i.................iiiiiiiii...................................................
[00:43:19] 
[00:43:19] ---- [ui] ui/borrowck/mut-borrow-of-mut-ref.rs stdout ----
[00:43:19] diff of stderr:
[00:43:19] 
[00:43:19] 
[00:43:19] 1 error[E0596]: cannot borrow immutable argument `b` as mutable
[00:43:19] +   --> $DIR/mut-borrow-of-mut-ref.rs:18:12
[00:43:19] 3    |
[00:43:19] 3    |
[00:43:19] 4 LL |     g(&mut b) //~ ERROR cannot borrow
[00:43:19] 5    |            ^ cannot borrow mutably
[00:43:19] 
[00:43:19] The actual stderr differed from the expected stderr.
[00:43:19] The actual stderr differed from the expected stderr.
[00:43:19] Actual stderr saved to /checkout/obj/build/x86_64-unknown-linux-gnu/test/ui/borrowck/mut-borrow-of-mut-ref/mut-borrow-of-mut-ref.stderr
[00:43:19] To update references, rerun the tests and pass the `--bless` flag
[00:43:19] To only update this specific test, also pass `--test-args borrowck/mut-borrow-of-mut-ref.rs`
[00:43:19] error: 1 errors occurred comparing output.
[00:43:19] status: exit code: 101
[00:43:19] status: exit code: 101
[00:43:19] command: "/checkout/obj/build/x86_64-unknown-linux-gnu/stage2/bin/rustc" "/checkout/src/test/ui/borrowck/mut-borrow-of-mut-ref.rs" "--target=x86_64-unknown-linux-gnu" "--error-format" "json" "-Zui-testing" "-C" "prefer-dynamic" "-o" "/checkout/obj/build/x86_64-unknown-linux-gnu/test/ui/borrowck/mut-borrow-of-mut-ref/a" "-Crpath" "-O" "-Zunstable-options" "-Lnative=/checkout/obj/build/x86_64-unknown-linux-gnu/native/rust-test-helpers" "-L" "/checkout/obj/build/x86_64-unknown-linux-gnu/test/ui/borrowck/mut-borrow-of-mut-ref/auxiliary" "-A" "unused"
[00:43:19] ------------------------------------------
[00:43:19] 
[00:43:19] ------------------------------------------
[00:43:19] stderr:
[00:43:19] stderr:
[00:43:19] ------------------------------------------
[00:43:19] {"message":"cannot borrow immutable argument `b` as mutable","code":{"code":"E0596","explanation":"\nThis error occurs because you tried to mutably borrow a non-mutable variable.\n\nExample of erroneous code:\n\n